kick java 11 again